--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,20 @@
 /*
   Theme and global variables
 */
+html,
+body,
+#root {
+  height: 100%;
+}
+
 html {
   overflow-y: scroll;
 
   --game-spacing: 32px;
   --header-height: 4rem;
+
+  --keyboard-spacing: 8px;
+  --keyboard-letter-spacing: 4px;
 
   --color-success: hsl(150deg 70% 30%);
   --color-warning: hsl(50deg 100% 30%);
@@ -44,6 +53,7 @@ button {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  height: 100%;
 }
 
 header {
@@ -81,6 +91,7 @@ h1 {
   margin: 0 auto;
   min-width: 250px;
   max-width: min(500px, 58vh, 100%);
+  height: calc(100% - var(--header-height));
 }
 
 .guess-results {
@@ -229,4 +240,42 @@ h1 {
   to {
     transform: translateY(0%);
   }
+}
+
+.keyboard {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: var(--keyboard-spacing);
+  align-items: center;
+}
+
+.keyboard-row {
+  display: flex;
+  gap: var(--keyboard-letter-spacing);
+  justify-content: center;
+}
+
+.keyboard-letter {
+  padding: 16px 20px;
+  border-radius: 8px;
+  background-color: var(--color-gray-700);
+  text-transform: uppercase;
+}
+
+.keyboard-letter:hover {
+  background-color: var(--color-gray-900);
+}
+
+.keyboard-letter:active {
+  background-color: var(--color-gray-500);
+}
+
+.keyboard-letter:disabled {
+  cursor: default;
+  background-color: var(--color-gray-700);
+}
+
+.keyboard-letter.used {
+  background-color: var(--color-gray-300);
 }
